--- a/auction_module/report/auction_report.xml
+++ b/auction_module/report/auction_report.xml
@@ -9,5 +9,15 @@
             <field name="print_report_name">'%s Players List' % ((object.team_id.name or 'Team'))</field>
         </record>
 
+        <!-- Player card list print-->
+        <record id="action_report_player_card" model="ir.actions.report">
+            <field name="name">Player Card</field>
+            <field name="model">auction.team.player</field>
+            <field name="report_type">qweb-pdf</field>
+            <field name="report_name">auction_module.report_player_card_list</field>
+            <field name="report_file">auction_module.report_player_card_list</field>
+            <!--<field name="print_report_name">"Player Card - %s" % (object.name)</field>-->
+            <field name="binding_model_id" ref="model_auction_team_player"/>
+        </record>
     </data>
 </odoo>
