--- a/auction_module/views/auction_tournament_view.xml
+++ b/auction_module/views/auction_tournament_view.xml
@@ -31,6 +31,7 @@
                     <group>
                         <group>
                             <field name="name"/>
+                            <field name="description"/>
                         </group>
 
                     </group>
