--- a/auction_module/views/auction_player_template_new.xml
+++ b/auction_module/views/auction_player_template_new.xml
@@ -64,7 +64,7 @@
       </div>
     </header>
 
-    <div class="container h-100">
+    <div class="container">
       <div
         class="row auction-single justify-content-center justify-content-lg-between gap-4"
       >
