--- a/auction_module/views/auction_player_card_print_list.xml
+++ b/auction_module/views/auction_player_card_print_list.xml
@@ -1,156 +1,83 @@
 <?xml version="1.0" encoding="utf-8"?>
 <odoo>
-
-
-
-<!--        <template id="report_player_card_list">-->
-<!--            <t t-foreach="docs" t-as="doc">-->
-<!--                <page t-call="web.basic_layout">-->
-
-<!--                    <html lang="en">-->
-<!--                      <head>-->
-<!--                        <link-->
-<!--                          href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"-->
-<!--                          rel="stylesheet"-->
-<!--                          integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"-->
-<!--                          crossorigin="anonymous"-->
-<!--                        />-->
-<!--                        &lt;!&ndash; google font &ndash;&gt;-->
-<!--                        <link rel="preconnect" href="https://fonts.googleapis.com" />-->
-<!--                        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin="1" />-->
-<!--                        <link-->
-<!--                          href="https://fonts.googleapis.com/css2?family=Teko:wght@600&amp;display=swap"-->
-<!--                          rel="stylesheet"-->
-<!--                        />-->
-
-<!--                        <link rel="stylesheet" href="/auction_module/static/src/assets/css/style.css" />-->
-<!--                        <title>Player Display</title>-->
-
-<!--                        &lt;!&ndash;<style></style>&ndash;&gt;-->
-<!--                      </head>-->
-<!--                  <body style="min-height: 100vh">-->
-<!--                    <header class="single-header" style="max-height: 150px !important;">-->
-<!--                      <div class="py-3 text-center">-->
-<!--                              <img src="/auction_module/static/src/assets/images/logo.svg" alt="Logo" />-->
-<!--                            <img t-att-src="image_data_uri(doc.photo)" alt="Logo" />-->
-
-
-<!--                      </div>-->
-<!--                      <div class="container">-->
-
-
-<!--                      </div>-->
-<!--                    </header>-->
-
-<!--                    <div class="container h-100">-->
-<!--                        <div class="row"-->
-
-<!--                      >-->
-<!--                        </div>-->
-<!--                      <div class="row"-->
-
-<!--                      >-->
-<!--                        <div class="column" style="width:40%;">-->
-<!--                            <img-->
-<!--                                t-att-src="image_data_uri(doc.photo)"-->
-<!--                                alt="Player Photo"-->
-<!--                                style="max-width: 300px; max-height: 400px; object-fit: cover; z-index: 99; position: relative;"-->
-<!--                            />-->
-<!--                        </div>-->
-<!--                        <div class="column" style="width:60%;">-->
-<!--                          <h3 class="stroke-only pt-5 text-left"><span t-esc="doc.sl_no"/></h3>-->
-<!--                          <h2 class="player-name"><span t-esc="doc.name"/></h2>-->
-<!--                          <p class="player-possition">Role:<span t-esc="doc.role"/></p>-->
-<!--                            <p class="player-possition"><span>Batting Style:</span> <span t-esc="doc.batting_style"/></p>-->
-<!--                            <p class="player-possition"><span>Bowling Style:</span> <span t-esc="doc.bowling_style"/></p>-->
-<!--                            <p class="player-possition"><span>Mobile:</span> <span t-esc="doc.contact"/></p>-->
-<!--                        </div>-->
-
-
-
-
-<!--                      </div>-->
-
-
-<!--                    </div>-->
-
-<!--                    <script-->
-<!--                      src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"-->
-<!--                      integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"-->
-<!--                      crossorigin="anonymous"-->
-<!--                    ></script>-->
-
-
-<!--                  </body>-->
-<!--                    </html>-->
-
-<!--                </page>-->
-<!--        </t>-->
-<!--    </template>-->
-
     <template id="report_player_card_list">
-    <t t-foreach="docs" t-as="doc">
-        <page t-call="web.basic_layout">
-            <html lang="en">
-                <head>
-                    <link
-                        href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
-                        rel="stylesheet"
-                        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
-                        crossorigin="anonymous"
-                    />
-                    <link rel="preconnect" href="https://fonts.googleapis.com" />
-                    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin="1" />
-                    <link
-                        href="https://fonts.googleapis.com/css2?family=Teko:wght@600&amp;display=swap"
-                        rel="stylesheet"
-                    />
-                    <link rel="stylesheet" href="/auction_module/static/src/assets/css/style.css" />
-                    <title>Player Display</title>
-                </head>
-                <body style="min-height: 100vh">
-                    <header class="single-header" style="max-height: 100px !important;">
-                        <div class="header-container d-flex justify-content-between align-items-center" style="padding: 0 20px;">
-                            <!-- Left Image -->
-                            <img src="/auction_module/static/src/assets/images/logo.svg" alt="Logo" style="max-height: 100px;" />
+        <t t-foreach="docs" t-as="doc">
+            <page t-call="web.basic_layout">
+                <html lang="en">
+                    <head>
+                        <link
+                            href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
+                            rel="stylesheet"
+                            integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
+                            crossorigin="anonymous"
+                        />
+                        <link rel="preconnect" href="https://fonts.googleapis.com" />
+                        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin="1" />
+                        <link
+                            href="https://fonts.googleapis.com/css2?family=Teko:wght@600&amp;display=swap"
+                            rel="stylesheet"
+                        />
+                        <link rel="stylesheet" href="/auction_module/static/src/assets/css/style.css" />
+                        <title>Player Display</title>
+                    </head>
+                    <body style="min-height: 100vh">
+                        <header class="single-header" style="max-height: 100px !important;">
+                            <div class="header-container d-flex justify-content-between align-items-center" style="padding: 0 20px;">
+                                <!-- Left Image -->
+                                <img src="/auction_module/static/src/assets/images/logo.svg" alt="Logo" style="max-height: 100px;" />
 
-                            <!-- Right Image -->
-                            <img t-att-src="image_data_uri(doc.tournament_id.logo)" alt="Player Photo" style="max-height: 100px; margin-left: 350px;" />
-                        </div>
-                    </header>
-                    <div class="container h-100">
-                        <div class="row">
-                        </div>
-                        <div class="row">
-                            <div class="column" style="width:40%;">
-                                <img
-                                    t-att-src="image_data_uri(doc.photo)"
-                                    alt="Player Photo"
-                                    style="max-width: 300px; max-height: 400px; object-fit: cover; z-index: 99; position: relative;"
-                                />
+                                <!-- Right Image -->
+                                <img t-att-src="image_data_uri(doc.tournament_id.logo)" alt="Tournament Logo" style="max-height: 100px; margin-left: 350px;" />
                             </div>
-                            <div class="column" style="width:60%;">
-                                <h3 class="stroke-only pt-5 text-left"><span t-esc="doc.sl_no" /></h3>
-                                <h2 class="player-name"><span t-esc="doc.name" /></h2>
-                                <p class="player-possition">Role:<span t-esc="doc.role" /></p>
-                                <p class="player-possition"><span>Batting Style:</span> <span t-esc="doc.batting_style" /></p>
-                                <p class="player-possition"><span>Bowling Style:</span> <span t-esc="doc.bowling_style" /></p>
-                                <p class="player-possition"><span>Mobile:</span> <span t-esc="doc.contact" /></p>
+                        </header>
+                        <div class="container h-100">
+                            <div class="row">
+                            </div>
+                            <div class="row">
+                                <div class="column" style="width:40%;">
+                                    <img
+                                        t-att-src="image_data_uri(doc.photo)"
+                                        alt="Player Photo"
+                                        style="max-width: 300px; max-height: 400px; object-fit: cover; z-index: 99; position: relative;"
+                                    />
+                                </div>
+                                <div class="column" style="width:60%;">
+                                    <h3 class="stroke-only pt-5 text-left"><span t-esc="doc.sl_no" /></h3>
+
+                                    <h2 class="player-name">
+                                        <span t-esc="doc.name" />
+                                        <!-- Display "ICON PLAYER" tag if the boolean is set -->
+                                        <t t-if="doc.icon_player">
+                                            <span class="badge bg-warning text-dark" style="margin-left: 10px;">ICON PLAYER</span>
+                                            <!-- Display Team Information -->
+                                            <div class="team-info mt-3">
+                                                <p style="margin-bottom: 5px;">
+                                                    <strong>Team:</strong> <span t-esc="doc.assigned_team_id.name" />
+                                                </p>
+                                                <img
+                                                    t-att-src="image_data_uri(doc.assigned_team_id.logo)"
+                                                    alt="Team Logo"
+                                                    style="max-height: 50px;"
+                                                />
+                                            </div>
+                                        </t>
+                                    </h2>
+                                    <p class="player-possition">Role:<span t-esc="doc.role" /></p>
+                                    <p class="player-possition"><span>Batting Style:</span> <span t-esc="doc.batting_style" /></p>
+                                    <p class="player-possition"><span>Bowling Style:</span> <span t-esc="doc.bowling_style" /></p>
+                                    <p class="player-possition"><span>Mobile:</span> <span t-esc="doc.contact" /></p>
+                                </div>
                             </div>
                         </div>
-                    </div>
-                    <script
-                        src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
-                        integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
-                        crossorigin="anonymous"
-                    ></script>
-                </body>
-            </html>
-        </page>
-    </t>
-</template>
-
-
-
+                        <script
+                            src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+                            integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+                            crossorigin="anonymous"
+                        ></script>
+                    </body>
+                </html>
+            </page>
+        </t>
+    </template>
 
 </odoo>
