--- a/auction_module/views/auction_team_player.xml
+++ b/auction_module/views/auction_team_player.xml
@@ -10,7 +10,10 @@
                     <field name="sl_no" filter_domain="[('sl_no','=',self)]" string="Sl No"/>
                     <field name="name" filter_domain="['|',('contact','ilike',self),('name','ilike',self)]" string="Name/Contact"/>
                     <field name="assigned_team_id" filter_domain="[('assigned_team_id','ilike',self)]" string="Team"/>
+                    <filter string="Domestic Players" name="domestic" domain="[('player_type', '=', 'domestic')]"/>
+                    <filter string="Foreign Players" name="inactive" domain="[('player_type', '=', 'foreign')]"/>
                     <filter string="Inactive Players" name="inactive" domain="[('active', '=', False)]"/>
+
                     <group expand="0" string="Group By">
                         <filter name="group_team" string="Team" domain="[]" context="{'group_by': 'assigned_team_id'}"/>
 
